service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden
  namespace: default
spec:
  selector:
    app: vaultwarden
  ports:
  - name: http
    targetPort: 80
    port: 80
