ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: vaultwarden
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`vaultwarden.davicoelho.com`)
      kind: Rule
      priority: 10
      services:
        - name: vaultwarden
          port: 80
          sticky:
            cookie:
              httpOnly: true
              name: SESSION
              secure: true
              sameSite: none
  tls:
    secretName: vaultwarden-davicoelho-com-tls
